--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
  
         <title>Tuts+ Chat Application</title>
-        <meta name="description" content="Tuts+ Chat Application" />
+        <meta name="description" content="Geneva Convention Written Records" />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
